seed team stats and get standings
